--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Integrity Checker</title>
 </head>
 
-<body class="background font1">
+<body id="background" class="background font1">
 
     <div id="compareHashBox" class="translucentBack font1 hidden">
         <div class="compareHashBox">
